@@ -350,11 +350,7 @@ display(void)
 	i = totallines - nextline + 1;
 	bottomline = nextline;
 	if (i > 0) {
-	    s = "s";
-	    if (i == 1) {
-		s = "";
-	    }
-	    printw("* %d more line%s - press the space bar to display more *", i, s);
+	    printw("* Lines %d-%d of %d, %d more - press the space bar to display more *", topline, bottomline, totallines, i);
 	}
 	/* if this is the last page of references */
 	else if (topline > 1 && nextline > totallines) {
